# lorin-proto

./: .env.example  .gitignore  LICENSE  README.md  evaluate_results.py  main.py  pyproject.toml  run_build_faiss.py  run_stage2.py
LORIN/: __init__.py
LORIN/agent/: __init__.py  graph.py  schema.py  state.py
LORIN/config/: __init__.py  settings.py
LORIN/llm/: __init__.py  chatbot.py  token_utils.py
LORIN/log_data/: visualize_logs_v6_final.py
LORIN/logger/: __init__.py  logger.py
LORIN/make_faiss/: make_faiss_with_bge_multilingual_gemma2.py  search_engine.py
LORIN/process/: __init__.py  base.py  route.py
LORIN/prompt/: __init__.py  answer_activity.j2  answer_final.j2  answer_sub.j2  pivot_validation.j2  planner_activity.j2  planner_expansion.j2  planner_initial.j2  planner_tot.j2  quality_evaluation.j2  replanner_analysis.j2  replanner_reconstruction.j2  template_loader.py
LORIN/ui/: __init__.py  parse_log.py  streamlit_app.py  upload_file.py
LORIN/utils/: __init__.py  chatbot_factory.py  json_parser.py
bge-multilingual-gemma2/: README.md  added_tokens.json  config.json  config_sentence_transformers.json
data/gt/: case_10gt.txt  case_11gt.txt  case_12gt.txt  case_13gt.txt  case_14gt.txt  case_15gt.txt  case_16gt.txt  case_17gt.txt  case_18gt.txt  case_19gt.txt  case_1gt.txt  case_20gt.txt  case_2gt.txt  case_3gt.txt  case_4gt.txt  case_5gt.txt  case_6gt.txt  case_7gt.txt  case_8gt.txt  case_9gt.txt
data/logs/: case_10.csv  case_11.csv  case_12.csv  case_13.csv  case_14.csv  case_15.csv  case_16.csv  case_17.csv  case_18.csv  case_19.csv  (+10 more)
stage1_filtering/: Drain.py  parse_log.py  parse_log_batch.py  stage1_process.py
(+31 files in other folders)
